Fix grid cutoff on mobile explore pages (#175)

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -65,6 +65,11 @@
       @media (max-width: 768px) {
         padding: 75px 0 75px 0;
       }
+      .row {
+        @media (max-width: 768px) {
+          margin-left: 0;
+        }
+      }
     }
     .poster-wrapper {
       float: left;
